kubernetes/apps/apps/media/sabnzbd/ingressroutetcp-privoxy.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: sabnzbd-privoxy
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: privoxy.lan.${CLUSTER_DOMAIN}
    external-dns.kubernetes.io/hostname: privoxy.lan.${CLUSTER_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${TRAEFIK_LB_IP}
    external-dns.kubernetes.io/target: ${TRAEFIK_LB_IP}
spec:
  entryPoints:
    - privoxy
  routes:
    - match: HostSNI(`*`)
      middlewares:
        - name: sabnzbd-privoxy-lan-allowlist
      services:
        - name: sabnzbd
          port: 8118
