kubernetes/apps/apps/media/sabnzbd/ingressroutetcp-socks.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: sabnzbd-socks
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: socks.lan.${CLUSTER_DOMAIN}
    external-dns.kubernetes.io/hostname: socks.lan.${CLUSTER_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${TRAEFIK_LB_IP}
    external-dns.kubernetes.io/target: ${TRAEFIK_LB_IP}
spec:
  entryPoints:
    - socks
  routes:
    - match: HostSNI(`*`)
      services:
        - name: sabnzbd
          port: 9118
